test_regress/t/t_union_hard.out
%Error: t/t_union_hard.v:10:17: Hard packed union members must have equal size (IEEE 1800-2023 7.3.1)
                              : ... note: In instance 't'
   10 |       bit [7:0] val1;
      |                 ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
